--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   xml: ^6.0.1
   open_file: ^3.5.10
   provider: ^6.0.5
+  intl: ^0.19.0
 
 
   # The following adds the Cupertino Icons font to your application.
