--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   open_file: ^3.5.10
   provider: ^6.0.5
   intl: ^0.19.0
+  blinking_text: ^1.0.4
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -61,6 +62,7 @@ dev_dependencies:
 flutter:
   assets:
     - documents/Vorlage.docx
+    - documents/LV.docx
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
