--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   charset: ^2.0.0
   path: ^1.9.0
   rename_app: any
+  http: any
+  google_maps_flutter: ^2.2.0
 
 dev_dependencies:
   flutter_test:
